--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="bg-gradient-to-br from-gray-100 to-white min-h-screen">
+<div class="bg-gradient-to-br from-gray-100 to-white">
     <div class="max-w-7xl mx-auto py-12 px-4">
         <div class="text-center mb-12">
             <h1 class="text-4xl md:text-5xl font-bold text-gray-800">
