--- a/src/app/components/buyer/buyer.component.html
+++ b/src/app/components/buyer/buyer.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="w-full bg-gray-100 py-10">
     <div class="max-w-4xl mx-auto text-center px-4">
         <h1 class="text-4xl md:text-5xl font-bold mb-4">Gestión de Compradores</h1>
