--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="bg-gradient-to-br from-gray-100 to-white">
     <div class="max-w-7xl mx-auto py-12 px-4">
         <div class="text-center mb-12">
