--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="flex items-center justify-center bg-gray-100">
+<div class="flex items-center justify-center h-screen bg-gray-100 overflow-hidden">
     <div class="bg-white p-6 rounded-lg shadow-lg w-full sm:w-96">
         <div class="flex flex-col items-center text-center mb-6">
             <h3 class="font-bold text-2xl mt-2">Iniciar Sesión</h3>
